coding page text overflow fixed

--- a/app/stylesheets/partials/_coding_page.sass
+++ b/app/stylesheets/partials/_coding_page.sass
@@ -35,80 +35,6 @@ body #content #main .activity_tree a
   span
     padding: 0 48px 0 3px
 
-ul.activity_tree
-  border-bottom: $filler 4px solid
-  clear: both
-  font-size: 12px
-  ul
-    border-left: 1px dotted $lightest-blue
-    border-right: 1px dotted $lightest-blue
-    padding: 0 5px
-  li
-    border-top: $filler 4px solid
-    font-size: 12px
-    list-style: none
-    &:hover
-      background: $filler + #030303
-    > div
-      padding: 5px 0
-    div.invalid
-      background: #f7eeec
-      .subtotal
-        background: $lighter-blue
-    a.invalid_node
-      background: #FF0000
-      color: #FFF
-      font-weight: bold
-      text-align: center
-      width: 8px
-      +border-radius(30px)
-    > span
-      float: left
-    input, textarea
-      background: white
-      margin-bottom: 6px
-      padding: 3px !important
-    .greyed
-      color: $light_grey
-      display: inline
-      width: 10px
-    span
-      font-size: 1.4em
-      font-weight: bold
-      &.expanded
-        color: red
-        padding-top: 7px
-      &.collapsed
-        color: green
-        padding-top: 7px
-    ul
-      margin: 0 15px
-      li
-        padding-bottom: 0
-        border-top: $lightest-blue unquote(" 1px dashed ")
-        
-  .values input
-    margin-bottom: 0 !important
-
-  .subtotal
-    background: $lightest-blue
-    display: inline-block !important
-    float: right
-    height: 12px
-    margin-left: 3px
-    padding: 5px
-    width: 80px
-    +border-radius
-
-  .hide
-    display: none
-  span
-    color: #999999
-    font-family: "Courier New", Courier, monospace
-    cursor: default
-    &.expanded, &.collapsed
-      cursor: pointer
-
 body.app
   ul.activity_tree, #activity_description
     label
